packages/isar_generator/test/errors/class/variable.dart
// only classes

import 'package:isar/isar.dart';

// ignore: invalid_annotation_target
@Collection()
const t = 'hello';
